style: move global styles from index.html into index.css

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       })();
     </script>
   </head>
-  <body class="dark:text-white font-serif bg-gray-100 dark:bg-gray-800">
+  <body>
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
