--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>Lynn's Blog</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,400;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,400;0,700;1,400&family=Noto+Serif+SC:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
     <script>
